[package]
name = "skroutz-prosfores-scraper-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.18.1"
anyhow = "1.0.80"
tabled = "0.15.0"
rand = "0.8.5"
